add other JDBC drivers